# aisd2526

./: README.md  Zadanie 1  Zadanie 2  Zadanie 2.cpp  Zadanie 3  Zadanie 4  Zadanie 5
Lista 1/kod/: CMakeLists.txt  Zadanie 3  Zadanie 3.cpp  Zadanie 4  Zadanie 4.cpp  Zadanie 5.cpp  Zadanie1  Zadanie1.cpp
Lista 2/: CMakeLists.txt  Zadanie 1  Zadanie 1.cpp  Zadanie 2  Zadanie 2.cpp
Lista 2/kod/: CMakeLists.txt  Zadanie 1  Zadanie 1.cpp  Zadanie 2  Zadanie 2.cpp  Zadanie 3  Zadanie 3.cpp  Zadanie 4  Zadanie 4.cpp  Zadanie 5  Zadanie 5.cpp  Zadanie 6  Zadanie 6.cpp  test7  test7.cpp
Lista 2/sprawozdanie/: main.tex
Lista 3/: CMakeLists.txt
Lista 3/kod/: Wykres 2.py  Wykres 4.py  Wykres 6.py  Zadanie 1  Zadanie 1 i 2  Zadanie 1 i 2.cpp  Zadanie 1.cpp  Zadanie 2  Zadanie 2.cpp  Zadanie 3 i 4  Zadanie 3 i 4.cpp  Zadanie 5 i 6  Zadanie 5 i 6.cpp  Zadanie 7  Zadanie 7.cpp  Zadanie_2.cpp  Zadanie_2.h  dane_act_dp.csv  dane_activity.csv  dane_cut_rod.csv  dane_lcs.csv  fun  fun.cpp
Lista 3/sprawozdanie/: main.tex
kod/: CMakeLists.txt  Zadanie 3.cpp
sprawozdanie/: main.tex
