cmake_minimum_required(VERSION 4.0)
project(Lista_3)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lista_3
        "kod/Zadanie 7.cpp"
        "kod/Zadanie 3 i 4.cpp"
        "kod/Zadanie 1 i 2.cpp"
)

add_executable(Testy_Zadanie2
        "kod/Zadanie_2.cpp"
        "kod/Zadanie 1.cpp"
        "kod/Zadanie_2.h"
)

add_executable(Testy_Zadanie6
        "kod/Zadanie 5 i 6.cpp"
)