cmake_minimum_required(VERSION 4.0)
project(Clion_aisd)

set(CMAKE_CXX_STANDARD 20)

add_executable(Zadanie1 "Zadanie1.cpp")
add_executable(Zadanie 2 "Zadanie 2.cpp"
        "Zadanie 2.cpp")
add_executable(Zadanie 3 "Zadanie 3.cpp")
add_executable(Zadanie 4 "Zadanie 4.cpp")
add_executable(Zadanie 5 "Zadanie 5.cpp")