cmake_minimum_required(VERSION 4.0)
project(Lista_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Zadanie1 "Zadanie 1.cpp")
add_executable(Zadanie2 "Zadanie 2.cpp")
add_executable(Zadanie3 "Zadanie 3.cpp")
add_executable(Zadanie4 "Zadanie 4.cpp")
add_executable(Zadanie5 "Zadanie 5.cpp")
add_executable(Zadanie6 "Zadanie 6.cpp")
add_executable(test7 "test7.cpp")